--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -8,7 +8,7 @@
       <div class='row'>
         <div class='col col-12'>
           
-          <h2>
+          <h2 class='mb-3'>
             <span class='title'>{{objs}}</span>
             <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
             <div class='icon-export'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div>
