--- a/events/templates/events/event_list_ajax.html
+++ b/events/templates/events/event_list_ajax.html
@@ -7,20 +7,20 @@
     <tbody>
     {% for event in event_category.list %}
       <tr>
-        <td scope="row">
-          <button type="button"
-              class="btn btn-danger btn-sm js-delete-object"
-              data-url="{% url 'event_delete' event.id %}">
-          <span class="glyphicon glyphicon-trash"></span> Delete
-          <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
-            <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
-          </button>
-        </td>
         <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
         <td>{{event.date}}</td>
         <td class='text-center'>{{event.doors_open}}</td>
         <td class='text-center'>0</td>
         <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
+        <td><button type="button" class="btn js-delete-object" data-url="{% url 'event_delete' event.id %}"><img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/></button></td>
+        <td>
+          <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
+            <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+          </button>
+          <button type="button" class="btn js-delete-object" data-url="{% url 'event_delete' event.id %}">
+            <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
+          </button>
+        </td>
       </tr>
       {% empty %}
       <tr>
