--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -4,25 +4,29 @@
   
   <thead>
     <tr class='header'>
-      <th scope="col"></th>
       <th scope="col">ID</th>
       <th scope="col">Name</th>
       <th scope="col">Bar</th>
       <th scope="col">Default Positions</th>
+      <th scope="col">Edit</th>
     </tr>
   </thead>
   
   <tbody>
   {% for location in locations %}
     <tr>
-      <td scope="row">
-        <button type="button" class="btn btn-danger btn-sm js-delete-object" data-url="{% url 'location_delete' location.id %}">Delete</button>
-        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}"><img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/></button>
-      </td>
       <td>{{location.location_id}}</td>
       <td>{{location.title}}</td>
       <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
       <td>0</td>
+      <td>
+        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
+          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+        </button>
+        <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
+          <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
+        </button>
+      </td>
     </tr>
   {% endfor %}
   </tbody>
