--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -3,31 +3,24 @@
 <table class="table table-striped table-hover" id='object-table'>
   
   <thead>
-    <tr class='header'>
+    <tr class='header text-left'>
+      <th scope="col"></th>
       <th scope="col">ID</th>
       <th scope="col">First</th>
       <th scope="col">Last</th>
       <th scope="col">Phone</th>
-      <th scope="col">Food</th>
-      <th scope="col">Alcohol</th>
-      <th scope="col">Admin</th>
-      <th scope="col">Active</th>
-      <th scope="col">Edit</th>
+      <th class="text-center" scope="col">Food</th>
+      <th class="text-center" scope="col">Alcohol</th>
+      <th class="text-center" scope="col">Admin</th>
+      <th class="text-center" scope="col">Active</th>
+      
     </tr>
   </thead>
   
   <tbody>
   {% for employee in employees %}
     <tr>
-      <td>{{employee.employee_id}}</td>
-      <td>{{employee.first_name}}</td>
-      <td>{{employee.last_name}}</td>
-      <td>{{employee.phone}}</td>
-      <td>{% include 'base/boolean.html' with bool=employee.food_permit %}</td>
-      <td>{% include 'base/boolean.html' with bool=employee.alcohol_permit %}</td>
-      <td>{% include 'base/boolean.html' with bool=employee.admin %}</td>
-      <td>{% include 'base/boolean.html' with bool=employee.active %}</td>
-      <td>
+      <td class="text-center">
         <button type="button" class="btn js-update-object" data-url="{% url 'employee_update' employee.id %}">
           <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
         </button>
@@ -35,6 +28,15 @@
           <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
         </button>
       </td>
+      <td>{{employee.employee_id}}</td>
+      <td>{{employee.first_name}}</td>
+      <td>{{employee.last_name}}</td>
+      <td>{{employee.phone}}</td>
+      <td class="text-center">{% include 'base/boolean.html' with bool=employee.food_permit %}</td>
+      <td class="text-center">{% include 'base/boolean.html' with bool=employee.alcohol_permit %}</td>
+      <td class="text-center">{% include 'base/boolean.html' with bool=employee.admin %}</td>
+      <td class="text-center">{% include 'base/boolean.html' with bool=employee.active %}</td>
+
     </tr>
   {% endfor %}
   </tbody>
