--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -9,24 +9,20 @@
   <table class="table table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
     <thead>
       <tr class='header text-center'>
+        <th scope="col"></th>
         <th scope="col" class='text-left'>Event</th>
         <th scope="col" class='text-left'>Date</th>
-        <th scope="col" class='text-left'>Doors Open</th>
-        <th scope="col">Scheduled</th>
+        <th scope="col" class='text-left'>Doors</th>
+        <th scope="col">#</th>
         <th scope="col">Alcohol</th>
-        <th scope="col">Edit</th>
+        
       </tr>
     </thead>
 
     <tbody>
     {% for event in event_category.list %}
       <tr>
-        <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
-        <td>{{event.date}}</td>
-        <td class='text-center'>{{event.doors_open}}</td>
-        <td class='text-center'>0</td>
-        <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
-        <td>
+        <td class="text-center">
           <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
             <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
           </button>
@@ -34,6 +30,12 @@
             <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
           </button>
         </td>
+        <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
+        <td>{{event.date}}</td>
+        <td>{{event.doors_open}}</td>
+        <td class='text-center'>0</td>
+        <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
+
       </tr>
       {% empty %}
       <tr>
