--- a/templates/objects/create.html
+++ b/templates/objects/create.html
@@ -1,19 +1,17 @@
 {% load widget_tweaks %}
 
-<form method="post" action="{% url obj|add:'_create' %}" class="js-object-create-form">
-  {% csrf_token %}
+<form method="post">{% csrf_token %}
   <div class="modal-header">
+    <h4 class="modal-title">Create {{obj}}</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Create {{obj}}</h4>
   </div>
   <div class="modal-body">
-    {% include 'objects/form.html' %}
+    {{form.as_p}}
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary">Create {{obj}}</button>
+    <button type="submit" value="Save" class="btn btn-primary">Create {{obj}}</button>
   </div>
 </form>
-
