Update AJAX to function with modal

--- a/templates/objects/create.html
+++ b/templates/objects/create.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
 
-<form method="post">{% csrf_token %}
+<form method="post" class="js-create-object">{% csrf_token %}
   <div class="modal-header">
     <h4 class="modal-title">Create {{obj}}</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
