--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -16,12 +16,10 @@
   {% for location in locations %}
     <tr>
       <td>
-        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
-          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
-        </button>
-        <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
-          <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
-        </button>
+        
+        <a href="{% url 'locations:location_edit' location.id %}">edit</a>
+        <a href="{% url 'locations:location_delete' location.id %}">delete</a>
+        
       </td>
       <td>{{location.location_id}}</td>
       <td>{{location.title}}</td>
