--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -10,16 +10,19 @@
           
           <h2 class='mb-3'>
             <span class='title'>{{objs}}</span>
-            {{obj|add:'_create'}}
-            <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
+            
+            <a class="js-create-object" data-url="{% url objs|add:':'|add:obj|add:'_new' %}">New</a>
+            
             <div class="btn-group float-right ml-2" style="margin-top:11px;">
               <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Export
               </button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="{% url 'export_'|add:objs %}">.csv</a>
-                <a class="dropdown-item" href="{% url 'export_'|add:objs %}">.xls</a>
-              </div>
+
+              
+              {# <div class="dropdown-menu"> #}
+              {#  <a class="dropdown-item" href="{% url 'export_'|add:objs %}">.csv</a>#}
+              {#   <a class="dropdown-item" href="{% url 'export_'|add:objs %}">.xls</a>#}
+              {# </div>#}
               
             </div>
             <div class="btn btn-dark float-right" style="margin-top:11px;" >Import</div>
@@ -28,7 +31,7 @@
           
           <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
-              <div class="modal-content"></div>
+              <div class="modal-content">Hello!</div>
             </div>
           </div>
          </h2>
