--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -2,19 +2,28 @@
 {% regroup events by event_category as active_list %}
 {% for event_category in active_list %}
 
+
 <div class='event-row py-3 px-3 mb-4'>
   <a class='table-header mb-3'>
-    {% cycle 'Upcoming Events' 'Previous Events' %}
   </a>
   <table class="table table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
     <thead>
       <tr class='header text-center'>
-        <th scope="col"></th>
-        <th scope="col" class='text-left'>Event</th>
-        <th scope="col" class='text-left'>Date</th>
-        <th scope="col" class='text-left'>Doors</th>
-        <th scope="col">#</th>
-        <th scope="col">Alcohol</th>
+        {% if forloop.first %}
+        <th onclick="sortTable(0,'upcoming-events')" scope="col" class='text-left'><a>Event</a></th>
+        <th onclick="sortTable(1,'upcoming-events')" scope="col" class='text-left' id='date'><a>Date</a></th>
+        <th onclick="sortTable(2,'upcoming-events')" scope="col" class='text-left'><a>Doors</a></th>
+        <th onclick="sortTable(3,'upcoming-events')" scope="col"><a>#</a></th>
+        <th onclick="sortTable(4,'upcoming-events')" scope="col"><a>Alcohol</a></th>
+        <th scope="col">Edit</th>
+        {% else %}
+        <th onclick="sortTable(0), 'previous-events')" scope="col" class='text-left'><a>Event</a></th>
+        <th onclick="sortTable(1), 'previous-events')" scope="col" class='text-left'><a>Date</a></th>
+        <th onclick="sortTable(2), 'previous-events')" scope="col" class='text-left'><a>Doors</a></th>
+        <th onclick="sortTable(3), 'previous-events')" scope="col"><a>#</a></th>
+        <th onclick="sortTable(4), 'previous-events')" scope="col"><a>Alcohol</a></th>
+        <th scope="col">Edit</th>
+        {% endif %}
         
       </tr>
     </thead>
@@ -22,6 +31,11 @@
     <tbody>
     {% for event in event_category.list %}
       <tr>
+        <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
+        <td>{{event.date}}</td>
+        <td>{{event.doors_open}}</td>
+        <td class='text-center'>0</td>
+        <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
         <td class="text-center">
           <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
             <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
@@ -30,11 +44,6 @@
             <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
           </button>
         </td>
-        <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
-        <td>{{event.date}}</td>
-        <td>{{event.doors_open}}</td>
-        <td class='text-center'>0</td>
-        <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
 
       </tr>
       {% empty %}
