--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -4,28 +4,29 @@
   
   <thead>
     <tr class='header'>
-      <th scope="col"></th>
-      <th scope="col">ID</th>
-      <th scope="col">Name</th>
-      <th scope="col">Bar</th>
-      <th scope="col">#</th>
+      <th onclick="sortTable(0)" scope="col"><a>ID</a></th>
+      <th onclick="sortTable(1)" scope="col"><a>Name</a></th>
+      <th onclick="sortTable(2)" scope="col"><a>Bar</a></th>
+      <th onclick="sortTable(3)" scope="col"><a>Default Positions</a></th>
+      <th scope="col">Edit</th>
     </tr>
   </thead>
   
   <tbody>
   {% for location in locations %}
     <tr>
-      <td>
-        
-        <a href="{% url 'locations:location_edit' location.id %}">edit</a>
-        <a href="{% url 'locations:location_delete' location.id %}">delete</a>
-        
-      </td>
       <td>{{location.location_id}}</td>
       <td>{{location.title}}</td>
       <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
       <td>0</td>
-
+      <td>
+        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
+          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+        </button>
+        <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
+          <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
+        </button>
+      </td>
     </tr>
   {% endfor %}
   </tbody>
