--- a/sms/templates/sms/sms_text.html
+++ b/sms/templates/sms/sms_text.html
@@ -15,13 +15,78 @@
       </div>
       <hr />
       <div class='row'>
-        <div class='col col-12'>
+        <div class='col col-7'>
+          <div class='card shadow-custom'>
+            <div class='card-body mx-4 align-center'>
+              <a class='table-header mb-3'>Command / Response</a>
+              
+              
+              
+              
+              <table class="table table-striped table-hover" id='object-table'>
+  
+                <thead>
+                  <tr class='header'>
+                    <th onclick="sortTable(0)" scope="col"><a>CMD</a></th>
+                    <th onclick="sortTable(1)" scope="col"><a>Response</a></th>
+                    <th onclick="sortTable(1=3)" scope="col"><a>Description</a></th>
+                  </tr>
+                </thead>
+                
+                <tbody>
+                {% for text in texts  %}
+                  <tr>
+                    <td>{{text.command}}</td>
+                    <td>{{text.response}}</td>
+                    <td>{{text.description}}</td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              
+              </table>
+              
+              
+              
+              
             <p>Table #1</p>
             <br/> list admins with add (remove) feature from reg employee list, (maybe 2 levels of admin)
             <p>Table #2</p>
         <br /><strong>texts:</strong> dropdown for employee, admin, all
         <br /><strong>table:</strong> cmd, response, description, application to,
+            </div>
+          </div>
             
+        </div>
+        <div class='col col-5'>
+          <div class='card shadow-custom'>
+            <div class='card-body mx-4 align-center'>
+              
+              
+              
+              
+              <a class='table-header mb-3'>Admins</a>
+              <table class="table table-striped table-hover" id='object-table'>
+  
+                <thead>
+                  <tr class='header'>
+                    <th onclick="sortTable(0)" scope="col"><a>Name</a></th>
+                    <th onclick="sortTable(1)" scope="col"><a>Phone</a></th>
+                  </tr>
+                </thead>
+                
+                <tbody>
+                {% for admin in admins %}
+                  <tr>
+                    <td>{{admin.name}}</td>
+                    <td>{{admin.phone}}</td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              
+              </table>
+
+            </div>
+          </div>
         </div>
       </div>
       <hr />
