--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -1,4 +1,28 @@
 {% load staticfiles %}
+<div class='row mx-auto'>
+  <div class='col col-12 mx-auto'>
+<div class="pagination">
+    <span class="step-links mx-auto">
+        <ul class="pagination">
+            {% if employees.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page=1">&laquo; First</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ employees.previous_page_number }}">Previous</a></li>
+            {% endif %}
+    
+            <span class="current">
+              <li class="page-item"><a class="page-link">Page {{ employees.number }} of {{ employees.paginator.num_pages }}</a></li>
+            </span>
+    
+            {% if employees.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ employees.next_page_number }}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ employees.paginator.num_pages }}">Last &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </span>
+</div>
+</div>
+</div>
+
 
 <table class="table table-striped table-hover" id='object-table'>
   
@@ -43,3 +67,23 @@
   </tbody>
 
 </table>
+
+<div class="pagination">
+    <span class="step-links mx-auto">
+        <ul class="pagination">
+            {% if employees.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page=1">&laquo; First</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ employees.previous_page_number }}">Previous</a></li>
+            {% endif %}
+    
+            <span class="current">
+              <li class="page-item"><a class="page-link">Page {{ employees.number }} of {{ employees.paginator.num_pages }}</a></li>
+            </span>
+    
+            {% if employees.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ employees.next_page_number }}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ employees.paginator.num_pages }}">Last &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </span>
+</div>
