--- a/events/templates/events/detail/add_row.html
+++ b/events/templates/events/detail/add_row.html
@@ -3,7 +3,7 @@
     <div class='row' id='new-employee'>
       <div class='col col-12'>
         <div class='input-group'>
-          <img class='remove-{{loc}}' style='height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>
+          <!--<img class='remove-location remove-{{loc}}' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>-->
           <input type='text' class='form-control input-group-text' id='inlineFormInputGroup' placeholder='*E:' style='display:flex;margin-right:-1px;max-width:20%'>
           <select class='js-example-basic-single js-states form-control'>
               <option></option>
