--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -3,30 +3,41 @@
 <div class="card mx-auto shadow" class='testing' style="width: 18rem;">
               
   <div class="card-header location-header">
-      <input class='mr-1' style='height:18px; width:18px;' type="checkbox" data-target='#{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
+      <input class='mr-1' type="checkbox" data-target='#{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
       <span>{{location.title}}</span>
-      <a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' style='height:20px; width:20px;' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>
-      <a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' style='height:20px; width:20px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>
+      <!--<a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>-->
+      <!--<a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>-->
   </div>
       
   <div class="card-body location-body" id="{{location.location_id}}">
   {% for position in location.position_set.all %}
     <div class='row'>
       <div class='col col-12'>
-        <div class='input-group'>
-          <img class='remove-{{loc}}' style='height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>
-          <div class="input-group-prepend">
-            <div class="input-group-text"><strong>{{position.code}}:</strong></div>
+          
+          
+        <div class="btn-group" style="width:100%;">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text">{{position.code}}</div>
+            </div>
+            <select class="form-control form-control-sm">
+              <option selected>{{position}}</option>
+              {% for employee in all_employees%}
+                <option class="{{employee}}">{{employee.name}}</option>
+              {% endfor %}
+              
+            </select>
           </div>
-          <select class="js-example-basic-single js-states form-control float-right">
-            <option></option>
-            {% autoescape off %}
-              {{all_employees}}
-            {% endautoescape %}
+ 
+        </div>
+       
+          
+          
+
+        
           </select>
           {% include 'events/detail/add_row.html' with loc=location.location_id %}
           <br />
-        </div>
       </div>
     </div>
   {% endfor %}
