--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -16,6 +16,7 @@
             <button type="button" class="btn btn-dark float-right print"><span>Print</span></button>
             <button type="button" class="mx-2 btn-dark btn float-right"><span>Export</span></button>
             <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
+            <input class="btn btn-primary submit-schedule" type="submit" value="Submit">
           </h2>
         </div>
       </div>
