Changed Schedule model to inline of Event

--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -16,7 +16,10 @@
             <button type="button" class="btn btn-dark float-right print"><span>Print</span></button>
             <button type="button" class="mx-2 btn-dark btn float-right"><span>Export</span></button>
             <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
-            <input class="btn btn-primary submit-schedule" type="submit" value="Submit">
+            <form class="submit-schedule" action="/create_post/" method="POST" id="post-form">
+              <input class="btn btn-primary" type="submit" value="Submit">
+              <div class="random-text">test</div>
+            </form>
           </h2>
         </div>
       </div>
