--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -68,7 +68,7 @@ td > a { color:white; font-weight:600;}
 
 .location-body {background-color: rgba(256,256,256,.2);}
 
-.card {background-color: rgba(255, 255, 255, .15); border-radius:15px;}
+.card {background-color: rgba(255, 255, 255, .15);}
 .row {margin-bottom: .5rem;}
 .row:last-child {margin-bottom:0px;}
 
