--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -28,8 +28,8 @@
       <div class='row mx-auto'>
         <div class='col col-12'>
           <div class='card-columns'>
-          {% for location in locations %}
-            {% include 'events/detail/location_card.html' with loc=location.location_id %}
+          {% for location, position in schedule.items %}
+            {% include 'events/detail/location_card.html' with location=location position=position %}
           {% endfor %}
           </div>
           <hr />
