--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="card mx-auto shadow" class='testing' style="width: 18rem;">
+<div class="card mx-auto shadow" class='testing'>
               
   <div class="card-header location-header">
       <input class='mr-1' type="checkbox" data-target='#{{location}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
@@ -12,13 +12,12 @@
   <div class="card-body location-body" id="{{location}}">
   {% for shift, scheduled in position.items %}
     <div class='row'>
-      <div class='col col-12'>
         <div class="btn-group" style="width:100%;">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <div class="input-group-text">{{shift}}</div>
+          <div class="input-group input-group-sm">
+            <div class="col col-2 pr-0 input-group-prepend">
+              <div class="input-group-text" style="width:100%;">{{shift}}</div>
             </div>
-            <select class="form-control form-control-sm">
+            <select class="col col-6 form-control form-control-sm">
               
               {% if scheduled %}
                 <option value='{{shift}}' class='{{shift}}' selected>{{scheduled.employee}}</option>
@@ -30,13 +29,15 @@
                 <option class="{{employee}}">{{employee.name}}</option>
               {% endfor %}
             </select>
+            <div class="col col-4 pl-0 input-group-append input-group-sm">
+              <input type="text" class="form-control" placeholder="Time" aria-label="Username" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
+            </div>
           </div>
  
         </div>
 
           {# {% include 'events/detail/add_row.html' with loc=location.location_id %} #}
           <br />
-      </div>
     </div>
   {% endfor %}
   </div>
