--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -66,9 +66,13 @@ td > a { color:white; font-weight:600;}
 
 .navbar {background-color: rgba(0,0,0,.7);}
 
-.location-body {background-color: rgba(256,256,256,.2);}
+.location-title {font-weight: 300;font-size: 1.2em;vertical-align: middle;letter-spacing: 1px;margin-bottom:0px;}
+.location-body {background-color: rgba(256,256,256,.2);border-bottom-left-radius:.25rem; border-bottom-right-radius:.25rem}
+.card-header.location-header {
+    line-height: 12px;
+}
 
-.card {background-color: rgba(255, 255, 255, .15);}
+.card {background-color: rgba(255, 255, 255, .15); border:none;}
 .row {margin-bottom: .5rem;}
 .row:last-child {margin-bottom:0px;}
 
