Update event detail view to render regardless of existing schedule object

--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -34,7 +34,7 @@
               {% endfor %}
             </select>
             <div class="col col-4 pl-0 input-group-append input-group-sm">
-              <input type="text" class="form-control" placeholder="Time" aria-label="Username" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
+              <input type="text" class="form-control" placeholder="e.g. 6:30PM" aria-label="Username" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
             </div>
           </div>
  
